[package]
name = "aws_sdk"
version = "0.1.0"
authors = ["Robert Sarkozi"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusoto_core = "0.45.0"
rusoto_iot = "0.45.0"
rusoto_s3 = "0.45.0"
rusoto_dynamodb = "0.45.0"
tokio = "0.2.22"
