[package]
name = "rust_lambda"
version = "0.1.0"
authors = ["Robert Sarkozi <robert.sarkoezi@softing.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lambda_runtime = "0.4.1"
tokio = "1.12.0"
serde_json = "1.0.68"
serde = "1.0.130"
